--- a/perkenalan.html
+++ b/perkenalan.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Perkenalan Diri</title>
-
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link href="styles.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-    <div class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <h1 class="display-4">Halo, Saya Davi Rizky Madani</h1>
-                <p class="lead">Selamat datang di halaman perkenalan saya. Saya seorang pengembang web yang senang belajar
-                    teknologi baru!</p>
-
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal">Pelajari Lebih
-                    Lanjut</button>
-
-                <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="infoModalLabel">Tentang Saya</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Saya suka mengembangkan aplikasi web dengan teknologi terbaru seperti HTML5, CSS, JavaScript, dan
-                                framework seperti Bootstrap.
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <header>
+        <h1>Selamat Datang di Halaman Perkenalan</h1>
+    </header>
+    <section class="content">
+        <h2>Perkenalkan, Nama Saya</h2>
+        <p>Halo, nama saya <strong>John Doe</strong>. Saya seorang pengembang web yang sedang belajar membuat situs menggunakan HTML, CSS, dan JavaScript.</p>
+        <p>Saya sangat tertarik dengan teknologi web dan selalu ingin mengembangkan kemampuan saya dalam membuat aplikasi web yang interaktif dan responsif.</p>
+    </section>
+    <footer>
+        <p>&copy; 2025 John Doe</p>
+    </footer>
 </body>
-
 </html>
